# test-mkdocs

./: 404.html  README.md  index.html  latest  main.py  mkdocs.yaml  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: release.yaml
docs/: index.md
github/workflows/: release.yaml
v18/: 404.html  index.html  sitemap.xml
v19.0.1/: 404.html  index.html  sitemap.xml
v19.0.2/: 404.html  index.html  sitemap.xml
v20.0.0/: 404.html  index.html  sitemap.xml
v20.0.1/: 404.html  index.html  sitemap.xml
v21.0.0/: 404.html  index.html  sitemap.xml
v21.0.1/: 404.html  index.html  sitemap.xml
v21.0.2/: 404.html  index.html  sitemap.xml
v21.0.3/: 404.html  index.html  sitemap.xml
v21.0.3/search/: search_index.json
v21.0.4/: 404.html  index.html  sitemap.xml
v21.0.4/search/: search_index.json
v21.0.5/: 404.html  index.html  sitemap.xml
v21.0.5/search/: search_index.json
v21.1.0/: 404.html  index.html  sitemap.xml
v21.1.0/search/: search_index.json
