[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "test"
version = "0.3.3"
description = "Structured cli output — beautifully, simply, and dependency-free"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Vladislav Kishkin", email = "vladislav.kishkin01@gmail.com" }
]
maintainers = [
    { name = "Vladislav Kishkin", email = "vladislav.kishkin01@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff==0.11.4",
    "pytest==8.3.5",
]

docs = [
    "mkdocs-material==9.6.11",
    "mike==2.1.3",
]


[tool.ruff]
line-length = 120
target-version = "py310"
output-format = "github"

[tool.ruff.lint]
# See list of rules at: https://docs.astral.sh/ruff/rules/
select = ["E", "F", "W", "C90"]